force-app/main/default/objects/Signup_Form_Settings__c/Signup_Form_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Signup Form Settings</label>
</CustomObject>