force-app/main/default/objects/Signup_Form_Settings__c/fields/Form_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Form_Campaign_ID__c</fullName>
    <label>Form Campaign ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>