force-app/main/default/objects/Signup_Form_Settings__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>