force-app/main/default/objects/Signup_Form_Settings__c/fields/LeadInfoEmail__c.field-meta.xml
<CustomField>
    <fullName>LeadInfoEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LeadInfoEmail</label>
    <type>Checkbox</type>
</CustomField>