force-app/main/default/objects/Signup_Form_Settings__c/fields/Marketing_Cloud_Form_Name__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Cloud_Form_Name__c</fullName>
    <label>Marketing Cloud Form Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>