force-app/main/default/objects/Signup_Form_Settings__c/fields/Request_Host__c.field-meta.xml
<CustomField>
    <fullName>Request_Host__c</fullName>
    <label>Result Host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>