force-app/main/default/objects/Signup_Form_Settings__c/fields/Request_Page__c.field-meta.xml
<CustomField>
    <fullName>Request_Page__c</fullName>
    <label>Request Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>