force-app/main/default/objects/Signup_Form_Settings__c/fields/Result_Page__c.field-meta.xml
<CustomField>
    <fullName>Result_Page__c</fullName>
    <label>Result Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>